editar feito (put http)

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -114,7 +114,7 @@ section.productEdit-form{
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    display: none;
+    /* display: none;*/
 }
 .internal-modal {
     padding: 20px;
