--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -72,8 +72,8 @@
                   <td><%= book.precio%></td>
                   <td>Activo</td>
                   <td><a
-                        href="#"
-                        class="button-edit">
+                        href="/admin/editProduct/<%= book.id %>"
+                         class="button-edit">
                          <i class="fas fa-pen"></i>
                        </a>
 
@@ -84,7 +84,7 @@
                         </form></td>
                       </tr>
 
-                      <!-- EDIT FORM -->
+                      <!-- EDIT FORM 
 <section class="productEdit-form">
   <div class="internal-modal">
     <div class="closeEdit-create">
@@ -150,7 +150,7 @@
       </fieldset>
     </form>
   </div>
-</section>
+</section> -->
                 <% }) %>
                 
               
