--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -19,8 +19,7 @@
         <img
           src="images/Diseño y Logo/Logo-Berkshire.png"
           alt=""
-          class="logo-sticker__img"
-        />
+          class="logo-sticker__img">
       </figure>
       <form action="" method="POST" class="form">
         <div class="box">
