--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -1,3 +1,25 @@
+.edit-body {
+    background-color: var(--color-azulOscuro);
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.edit-body, .star {
+    height: 150%;
+} 
+.edit-header{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px 20px 8px;
+    padding-bottom: 0;
+    height: 10rem;
+    align-items: center;
+}
+.edit-btn {
+    font-size: var(--icon);
+    color: var(--color-beige);
+    cursor: pointer;
+  }
 main{
     display: flex;
     flex-direction: column;
@@ -46,6 +68,7 @@ section .search-table{
     justify-content: flex-start;
     padding: 6px 4px;
     font-size: 1rem;
+    outline: none;
     margin: 2px 0;
 }
 .search-table h2{
@@ -158,6 +181,7 @@ form#product{
 }
 form#product fieldset{
     border: none;
+    font-size: 0.8rem;
 }
 form#product input#image{
     background-color: transparent;
@@ -167,7 +191,9 @@ form#product input#image{
 form#product fieldset input{
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid var(--color-azulOscuro);
+    border-bottom: 2px solid var(--color-azulOscuro);
+    font-size: 0.8rem;
+    width: 65%;
 }
 form#product fieldset input.delete{
     background-color: white;
@@ -193,7 +219,9 @@ form#product fieldset input.display-shop{
     font-size: 30px;
     cursor: pointer;
 }
-
+.description-on{
+    display: none;
+}
 @media (min-width: 515px) {
     table {
         border-spacing: 7px;
@@ -210,7 +238,16 @@ form#product fieldset input.display-shop{
         text-align: left;
     }
     table img{
-        width: 18%;
+        width: 50%;
         height: auto;
+    }
+    .description-on{
+        display: table-cell;
+        width: 45%;
+    }
+}
+@media (min-width: 1024px ){
+    .products-table{
+       font-size: 0.8rem;
     }
 }
