--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -16,11 +16,13 @@
   <!-- LOGO CON LINK AL HOME -->
   <div class="logo">
       <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
-  </div>
+  </div >
     <!-- BURGER MENU -->
-    <a href="/user/signUp"><div class="btn">
+  <a href="/user/signUp">
+    <div class="">
       <i class="far fa-user" id="icon"></i>
-    </div></a>
+    </div>
+  </a>
   </header>
   <main>
     <!--LIST OF PRODUCTS SECTION-->
@@ -52,109 +54,41 @@
             <tr class="head-table">
               <th><input type="checkbox"></th>
               <th>Imagen</th>
+              <th class="description-on">Descripcion</th>
               <th>Título</th>
               <th>Autor</th>
               <th>Cantidad</th>
               <th>Precio</th>
               <th>Estado</th>
               <th> </th>
+              <th> </th>
             </tr>
           </thead> 
           <tbody>
              
                 <% products.forEach(book => { %>
-                  <tr>
+                <tr>
                   <td><input type="checkbox"></td>
                   <td><img src="/images/Libros/<%= book.imagen%>"></td>
+                  <td class="description-on"><%=  book.descripcion.slice(0 , 200) %> ...</td>
                   <td><%= book.titulo%></td>
                   <td><%= book.autor%></td>
                   <td><%= book.cantidad%></td>
                   <td><%= book.precio%></td>
                   <td>Activo</td>
-                  <td><a
-                        href="/admin/editProduct/<%= book.id %>"
-                         class="button-edit">
-                         <i class="fas fa-pen"></i>
-                       </a>
-
-                      <form action="admin/deleteProduct/<%=book.id%>?_method=DELETE" id="button-delete" method="POST">
-                          <button class="delete-btn" type="submit">Eliminar
-                         <!--    <i class="fas fa-times-circle"></i> -->
-                          </button>
-                        </form></td>
-                      </tr>
-
-                      <!-- EDIT FORM 
-<section class="productEdit-form">
-  <div class="internal-modal">
-    <div class="closeEdit-create">
-      <i class="fas fa-times" id="icon" aria-hidden="true"></i>
-    </div>
-    <div class="add-btn"><h2 id="shop-form">Editar libro <%= book.titulo %></h2></div>
-    <div class="errors">
-    </div>
-    <form method="POST" action="/admin/editProduct/<%= book.id %>?_method=PUT" enctype="multipart/form-data" id="product">
-      <fieldset>
-        <label for="image">Imagen:</label>
-        <input type="file" name="imagen" id="image" />
-      </fieldset>
-      <fieldset>
-        <label for="title">Título:</label>
-        <input
-          type="text"
-          name="titulo"
-          id="title"
-          value="<%= book.titulo %> "
-        />
-      </fieldset>
-      <fieldset>
-        <label for="autor">Autor :</label>
-        <input
-          type="text"
-          name="autor"
-          id="autor"  
-          value="<%= book.autor %> "
-        />
-      </fieldset>
-      <fieldset>
-        <label for="amount">Cantidad :</label>
-        <input
-          type="number"
-          name="cantidad"
-          id="amount"
-          value="<%= book.cantidad %>"
-        />
-      </fieldset>
-      <fieldset>
-        <label for="price">Precio :</label>
-        <input
-            type="text"
-            id="price"
-            name="precio"
-            value="<%= book.precio %>"
-        />
-      </fieldset>
-      <fieldset>
-        <label for="descripcion">Descripción :</label>
-        <input
-          type="textarea"
-          name="descripcion"
-          id="descripion"
-          value="<%= book.descripcion %>"
-          
-        />
-      </fieldset>
-      <fieldset>
-        <input class="delete" type="reset" value="Borrar">
-        <button class="display-shop" type="submit" > Guardar</button>
-      </fieldset>
-    </form>
-  </div>
-</section> -->
+                  <td>
+                    <a href="/admin/editProduct/<%= book.id %>" class="button-edit">
+                        <i class="fas fa-pen"></i>
+                    </a>
+                  </td>
+                  <td>
+                    <form action="deleteProduct/<%=book.id%>?_method=DELETE" id="button-delete" method="POST">
+                      <button class="delete-btn" type="submit"><i class="far fa-trash-alt"></i></button>
+                    </form>
+                  </td>
+                </tr>
                 <% }) %>
-                
-              
-              
+
             </tbody>
         </table>
       </div>
