--- a/spellBook/src/views/admin/editForm.ejs
+++ b/spellBook/src/views/admin/editForm.ejs
@@ -2,9 +2,8 @@
 <html lang="es">
     <!-- HEAD -->
     <%- include('../partials/head') %>
-<body>
-  <!-- HEADER -->
- <header class="header error-bg">
+<body class="edit-body">
+   
   <div class="star star1"></div>
   <div class="star star2"></div>
   <div class="star star3"></div>
@@ -13,86 +12,97 @@
   <div class="star star6"></div>
   <div class="star star7"></div>
   <div class="star star8"></div>
+  <!-- HEADER -->
+ <header class="edit-header">
+
+  <div class="star star1"></div>
+  <div class="star star2"></div>
+  <div class="star star3"></div>
+  <div class="star star4"></div>
+  <div class="star star5"></div>
+  <div class="star star6"></div>
+  <div class="star star7"></div>
+  <div class="star star8"></div>
+
   <!-- LOGO CON LINK AL HOME -->
-  <div class="logo">
-      <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
+  <div class="edit-logo">
+    <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
+</div >
+  <!-- BURGER MENU -->
+<a href="/user/signUp">
+  <div class="edit-btn ">
+    <i class="far fa-user" id="icon"></i>
   </div>
-    <!-- BURGER MENU -->
-    <a href="/user/signUp"><div class="btn">
-      <i class="far fa-user" id="icon"></i>
-    </div></a>
-  </header>
-  <main>
+</a>
+  </header>  
+  <!-- EDIT FORM -->
 
-                     <!-- EDIT FORM -->
-                     <section class="productEdit-form">
-                        <div class="internal-modal">
-                          <div class="closeEdit-create">
-                            <i class="fas fa-times" id="icon" aria-hidden="true"></i>
-                          </div>
-                          <div class="add-btn"><h2 id="shop-form">Editar libro <%= idBook.titulo %></h2></div>
-                          <div class="errors">
-                          </div>
-                          <form method="POST" action="/admin/editProduct/<%= idBook.id %>?_method=PUT" enctype="multipart/form-data" id="product">
-                            <fieldset>
-                              <label for="image">Imagen:</label>
-                              <input type="file" name="imagen" id="image" />
-                            </fieldset>
-                            <fieldset>
-                              <label for="title">Título:</label>
-                              <input
-                                type="text"
-                                name="titulo"
-                                id="title"
-                                value="<%= idBook.titulo %> "
-                              />
-                            </fieldset>
-                            <fieldset>
-                              <label for="autor">Autor :</label>
-                              <input
-                                type="text"
-                                name="autor"
-                                id="autor"  
-                                value="<%= idBook.autor %> "
-                              />
-                            </fieldset>
-                            <fieldset>
-                              <label for="amount">Cantidad :</label>
-                              <input
-                                type="number"
-                                name="cantidad"
-                                id="amount"
-                                value="<%= idBook.cantidad %>"
-                              />
-                            </fieldset>
-                            <fieldset>
-                              <label for="price">Precio :</label>
-                              <input
-                                  type="text"
-                                  id="price"
-                                  name="precio"
-                                  value="<%= idBook.precio %>"
-                              />
-                            </fieldset>
-                            <fieldset>
-                              <label for="descripcion">Descripción :</label>
-                              <input
-                                type="textarea"
-                                name="descripcion"
-                                id="descripion"
-                                value="<%= idBook.descripcion %>"
-                                
-                              />
-                            </fieldset>
-                            <fieldset>
-                              <input class="delete" type="reset" value="Borrar">
-                              <button class="display-shop" type="submit" > Guardar</button>
-                            </fieldset>
-                          </form>
-                        </div>
-                      </section>
+  <main class="">    
+    
+    <section class="conteiner-main">
+      <div class="conteiner-user-data">
+        <div class="add-btn">
+          <h2 id="shop-form" class="info-user"><%= idBook.titulo %></h2>
+        </div>
 
-        </main>
-        <script src="/js/admin.js"></script>
-    </body>
+        <form method="POST" action="/admin/editProduct/<%= idBook.id %>?_method=PUT" enctype="multipart/form-data" id="product">
+          <fieldset>
+            <label for="image">Imagen:</label>
+            <input type="file" name="imagen" id="image" />
+          </fieldset>
+          <fieldset class="user-data">
+            <label for="title">Título:</label>
+            <input
+              type="text"
+              name="titulo"
+              id="title"
+              value="<%= idBook.titulo %> "
+            />
+          </fieldset>
+          <fieldset class="user-data">
+            <label for="autor">Autor:</label>
+            <input
+              type="text"
+              name="autor"
+              id="autor"  
+              value="<%= idBook.autor %> "
+            />
+          </fieldset>
+          <fieldset class="user-data">
+            <label for="amount">Cantidad:</label>
+            <input
+              type="number"
+              name="cantidad"
+              id="amount"
+              value="<%= idBook.cantidad %>"
+            />
+          </fieldset>
+          <fieldset class="user-data">
+            <label for="price">Precio:</label>
+            <input
+                type="text"
+                id="price"
+                name="precio"
+                value="<%= idBook.precio %>"
+            />
+          </fieldset>
+          <fieldset class="user-data">
+            <label for="descripcion">Descripción:</label>
+            <input
+              type="textarea"
+              name="descripcion"
+              id="descripcion"
+              value="<%= idBook.descripcion %>"              
+            />
+          </fieldset>
+          <fieldset>
+            <input class="delete" type="reset" value="Borrar">
+            <button class="display-shop" type="submit" > Guardar</button>
+          </fieldset>
+        </form>
+      </div>
+    </section>
+
+  </main>
+</body>
 </html>
