--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -25,7 +25,7 @@
             <a href="/" class="menu__link">Inicio</a>
         </li>
         <li class="menu__items">
-            <a href="#" class="menu__link">Libros</a>
+            <a href="/product" class="menu__link">Libros</a>
         </li>
         <li class="menu__items">
           <a href="/novelties" class="menu__link">Recomendados</a>
