se arregla menu desplegable

--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -67,6 +67,6 @@
   <!-- FOOTER -->
   <%- include('../partials/footer') %>
   
-    <script src="js/header.js"></script>
+    <script src="/js/header.js"></script>
   </body>
 </html>
