--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -44,7 +44,7 @@
       <!-- REGISTRO E INICIO DE SESIÓN -->
       <div class="login">
         <a href="/user/signUp" class="login__btn">Registrate</a>
-        <a href="" class="login__btn login--up">Iniciar sesion</a>
+        <a href="/user" class="login__btn login--up">Iniciar sesion</a>
       </div>
     </nav>
   
@@ -70,13 +70,13 @@
         </a>
         <!-- MAGO PARA REGISTRARSE -->
         <div class="wizard">    
-             <a href="/login" class="wizard__image">
+             <a href="/user" class="wizard__image">
                  <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
              </a>
-             <a href="/login" class="wizard__login">
+             <a href="/user" class="wizard__login">
                 <p>Ingresar / </p>
              </a>
-             <a href="/login/signup" class="wizard__login">
+             <a href="/user/signup" class="wizard__login">
                  <p>Registrarse</p>
              </a>
         </div>
