--- a/spellBook/src/views/users/register.ejs
+++ b/spellBook/src/views/users/register.ejs
@@ -33,13 +33,13 @@
         <!-- NOMBRE -->
         <div class="info-user">
           <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png" alt="img de mago">
-          <p>Nombre del Usuario</p>
+          <p><%= userL.nombre %></p>
         </div>
 
         <!-- EMAIL -->
         <div class="info-user">
           <i class="fas fa-envelope user-data-icon"></i>
-          <p>example@exam.com</p>
+          <p><%= userL.email %></p>
         </div>
       </div>
 
