--- a/spellBook/src/views/users/login.ejs
+++ b/spellBook/src/views/users/login.ejs
@@ -26,8 +26,7 @@
           <h2 class="box__title">Iniciar sesion</h2>
         </div>
 
-        <div class="user">++++++++++++.
-          362
+        <div class="user">
           <input
             type="text"
             name="name"
