se acomodan midelwares de acceso a admin y se agrega el rol a la variable session.userLog

--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -16,7 +16,9 @@
   <!-- LOGO CON LINK AL HOME -->
   <div class="logo">
       <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
+      
   </div >
+  
     <!-- BURGER MENU -->
   <a href="/user/signUp">
     <div class="">
@@ -28,6 +30,7 @@
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
+      <h1>Hola <%= session.nombre %>  </h1>
       <div class="belluser">
         <button class="display-shop" id="button-create">Agregar libro</button>
         <a href="/login">
