se implementa el recordar ususario, medelwawre de rutas, cookies para mantener sesion abierta se arregla stilos del profile y se borra validator.js

--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -146,7 +146,7 @@
 /* NACIMIENTO */
 .image-icon {
     position: relative;
-    bottom: 43px;
+    right: 24px;;
 }
 
 .user-date-inputs-date {
@@ -157,6 +157,7 @@
     max-height: 40px;
     background: transparent;
     border: none;
+    width: 70%;
    
 }
 
