--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -20,7 +20,7 @@
   </div >
   
     <!-- BURGER MENU -->
-  <a href="/user/signUp">
+  <a href="/admin/addProduct">
     <div class="">
       <i class="far fa-user" id="icon"></i>
     </div>
@@ -30,15 +30,15 @@
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
-      <h1>Hola <%= session.nombre %>  </h1>
+      <h1>Hola <%= locals.userLog.nombre %>  </h1>
       <div class="belluser">
         <button class="display-shop" id="button-create">Agregar libro</button>
-        <a href="/login">
+        <a href="/user/login">
           <div class="">
             <i class="far fa-bell" id="icon"></i>
           </div>
         </a>
-        <a href="/login">
+        <a href="/user/login">
           <div class="">
             <i class="far fa-user" id="icon"></i>
           </div>
