--- a/spellBook/src/views/admin/editForm.ejs
+++ b/spellBook/src/views/admin/editForm.ejs
@@ -29,7 +29,7 @@
     <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
 </div >
   <!-- BURGER MENU -->
-<a href="/user/signUp">
+<a href="/admin/addProduct">
   <div class="edit-btn ">
     <i class="far fa-user" id="icon"></i>
   </div>
