trabajando con vista books

--- a/spellBook/public/stylesheets/styles.css
+++ b/spellBook/public/stylesheets/styles.css
@@ -11,6 +11,7 @@
 @import url('register.css');
 @import url('novelties.css'); 
 @import url('aboutUs.css');
+@import url('books.css');
 
 /* ESTILOS   GENERALES */
 .d-inline {
