--- a/spellBook/src/views/products/books.ejs
+++ b/spellBook/src/views/products/books.ejs
@@ -21,8 +21,8 @@
       <a href="/product/<%= book.id %> ">
         <img class="book-cover" src="/images/Libros/<%= book.imagen %>" alt="">
       </a>
-      <h3><%= book.nombre %> </h3>
-      <h5><%= book.autor %> </h5>
+      <h3 class="book-name"><%= book.nombre %> </h3>
+      <h5 class="book-autor"><%= book.autor %> </h5>
       <div class="book-price">
        <i class="fas fa-dollar-sign"></i>
        <p><%= book.precio %> </p>
