arreglando estilos home

--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -111,7 +111,7 @@
           <a href="/product/<%= book.id %> ">
             <img class="book-cover" src="/images/Libros/<%= book.imagen %> " alt="Portada de 'El temor de un hombre sabio'">
           </a>
-          <h3><%= book.nombre %> </h3>
+          <h3><%= book.titulo %> </h3>
           <h5><%= book.autor %> </h5>
         <div class="book-price">
           <i class="fas fa-dollar-sign"></i>
@@ -144,7 +144,7 @@
           <a href="/product/<%= book.id %> ">
             <img class="book-cover" src="/images/Libros/<%= book.imagen %> " alt="Portada de 'El temor de un hombre sabio'">
           </a>
-          <h3><%= book.nombre %> </h3>
+          <h3><%= book.titulo %> </h3>
           <h5><%= book.autor %> </h5>
         <div class="book-price">
           <i class="fas fa-dollar-sign"></i>
