--- a/spellBook/src/views/products/books.ejs
+++ b/spellBook/src/views/products/books.ejs
@@ -21,7 +21,7 @@
       <a href="/product/<%= book.id %> ">
         <img class="book-cover" src="/images/Libros/<%= book.imagen %>" alt="">
       </a>
-      <h3 class="book-name"><%= book.nombre %> </h3>
+      <h3 class="book-name"><%= book.titulo %> </h3>
       <h5 class="book-autor"><%= book.autor %> </h5>
       <div class="book-price">
        <i class="fas fa-dollar-sign"></i>
