--- a/spellBook/public/stylesheets/home.css
+++ b/spellBook/public/stylesheets/home.css
@@ -52,6 +52,7 @@ padding-bottom: 3rem;
  
 .card .card-content {
     padding: 15px;
+    margin-bottom: 30px;
   
 }  
 
@@ -93,7 +94,7 @@ padding-bottom: 3rem;
 }
 
 .card .card-content .card-text .bio {
-    width: 5rem;
+    width: 9rem;
     height: 9rem;
     opacity: 0.1;
 }
@@ -109,14 +110,14 @@ padding-bottom: 3rem;
 
 .card .card-content .card-text .bio-text {
     color: var(--color-azulOscuro);
-    font-size: 0.8rem;
+    font-size: 1rem;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -65%);
     margin: auto 0.5rem;
     height: 25%;
-    width: 75%;
+    width: 90%;
     display: flex;
     align-items: center;
 }
@@ -128,8 +129,8 @@ h4 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    font-size: 1rem;
-    margin: 20px auto 20px auto;
+    font-size: 1.5rem;
+    margin: 30px auto ;
 }
 
 /* SELECCION DEL MES */
@@ -312,6 +313,10 @@ h5 {
 
 @media (min-width: 768px) {
 
+  .card{
+    margin: auto 40px;
+  }
+
   .headline h1 {
     font-size: 3rem;
   }
@@ -325,9 +330,43 @@ h5 {
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
-    justify-content: center;
     padding-bottom: 6rem;
+    justify-content: space-evenly;
+  
   }
+
+  .card .card-content .writer-tolkien {
+    border: 5px solid rgba(193,161,211, 0.8);
+    border-radius: 50%;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    display: block;
+    height: 200px;
+    margin: auto;
+    width: 200px;
+   
+}
+
+.card .card-content .writer-sapkowski {
+    border: 5px solid rgba(193,161,211, 0.8);
+    border-radius: 50%;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    display: block;
+    height: 200px;
+    margin: auto;
+    width: 200px;
+   
+}
+
+.card .card-content .writer-martin {
+    border: 5px solid rgba(193,161,211, 0.8);
+    border-radius: 50%;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
+    display: block;
+    height: 200px;
+    margin: auto;
+    width: 200px;
+   
+}
 
   .month-selection {
     display: flex;
