--- a/spellBook/public/stylesheets/header.css
+++ b/spellBook/public/stylesheets/header.css
@@ -14,6 +14,7 @@
   color: var(--color-beige);
   font-family: var(--font-berkshire);
   letter-spacing: 0.2rem;
+  text-shadow: 2px 2px 4px grey;
 }
 .btn {
   text-align: end;
@@ -97,7 +98,7 @@
 
 /*  Media Queries */
 
-/* Descktop */
+/* Desktop */
 
 @media (min-width: 768px) {
   /* SE SACA EL MENU VERSION MOBILE Y TABLET */
@@ -121,7 +122,13 @@
     justify-content: center;
   }
   .logo__link {
-    font-size: 3rem;
+    font-family: var(--font-berkshire);
+    text-align: center;
+    font-size: 3.5rem;
+    margin: 0;
+    padding: 0.3rem;
+    letter-spacing: 0.2rem;
+    text-shadow: 3px 3px 6px grey;
   }
 
   /* LUPA, CARRITO Y MAGO DE USUARIO */
@@ -137,6 +144,7 @@
     font-size: 1.2rem;
     color: var(--color-beige);
     padding-right: 1rem;
+    margin-top: 0;
   }
 
   /* LUPA DE BUSQUEDA */
@@ -189,5 +197,20 @@
     display: flex;
     justify-content: space-evenly;
     width: 100%;
+  }
+
+  .menu__desk a {
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    margin: 0 2px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .menu__desk .menu__items__desk i{
+    font-size: 7px;
+    margin: 0 2px;
+    text-shadow: 1px 1px 2px grey;
   }
 }
