--- a/spellBook/public/stylesheets/home.css
+++ b/spellBook/public/stylesheets/home.css
@@ -96,7 +96,7 @@ padding-bottom: 3rem;
 .card .card-content .card-text .bio {
     width: 9rem;
     height: 9rem;
-    opacity: 0.1;
+    opacity: 0.15;
 }
 
 .card .card-content .card-text {
@@ -106,6 +106,7 @@ padding-bottom: 3rem;
     text-align: center;
     justify-content: center;
     margin: 0;
+    font-weight: 600;
 }
 
 .card .card-content .card-text .bio-text {
