--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -73,7 +73,7 @@
         </form>
         
         <!-- HACIA EL CARRITO DE COMPRAS -->
-        <a href="/cart">
+        <a class="header-cart" href="/cart">
             <i class="fas fa-shopping-cart user__icon__desk"></i>
         </a>
         <!-- MAGO PARA REGISTRARSE -->
@@ -83,7 +83,7 @@
                 <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
             </a>            
             <a href="/user/profile" class="wizard__login">
-              <p><%= locals.userLog.nombre %>  /</p>
+              <p><%= locals.userLog.nombre %>/</p>
            </a>
            <a href="/user/logout" class="wizard__login">
                <p> Cerrar sesión</p>
@@ -94,10 +94,10 @@
               <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
             </a>                        
             <a href="/user/login" class="wizard__login">
-              <p>Ingresar / </p>
+              <p>Ingresar/</p>
            </a>
            <a href="/user/signUp" class="wizard__login">
-               <p>Registrarse</p>
+               <p> Registrarse</p>
            </a>
           <% } %>
             
@@ -108,19 +108,19 @@
     <nav class="nav__desk">
         <ul class="menu__desk">
           <li class="menu__items__desk">
-              <a href="/" class="menu__link__desk">Inicio</a>
+              <a href="/" class="menu__link__desk"><i class="fas fa-circle"></i> Inicio <i class="fas fa-circle"></i></a>
           </li>
           <li class="menu__items__desk">
-              <a href="/product" class="menu__link__desk">Libros</a>
+              <a href="/product" class="menu__link__desk"><i class="fas fa-circle"></i> Libros <i class="fas fa-circle"></i></a>
           </li>
           <li class="menu__items__desk">
-            <a href="/novelties" class="menu__link__desk">Recomendados</a>
+            <a href="/novelties" class="menu__link__desk"><i class="fas fa-circle"></i> Recomendados <i class="fas fa-circle"></i></a>
           </li>
           <li class="menu__items__desk">
-            <a href="/novelties" class="menu__link__desk__desk">Novedades</a>
+            <a href="/novelties" class="menu__link__desk__desk"><i class="fas fa-circle"></i> Novedades <i class="fas fa-circle"></i></a>
           </li>
           <li class="menu__items__desk">
-            <a href="/aboutUs" class="menu__link__desk">Nosotros</a>
+            <a href="/aboutUs" class="menu__link__desk"><i class="fas fa-circle"></i> Nosotros <i class="fas fa-circle"></i></a>
           </li>
         </ul>
     </nav>
