--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -108,19 +108,19 @@
     <nav class="nav__desk">
         <ul class="menu__desk">
           <li class="menu__items__desk">
-              <a href="/" class="menu__link__desk"><i class="fas fa-circle"></i> Inicio <i class="fas fa-circle"></i></a>
+              <a href="/" class="menu__link__desk"> Inicio </a>
           </li>
           <li class="menu__items__desk">
-              <a href="/product" class="menu__link__desk"><i class="fas fa-circle"></i> Libros <i class="fas fa-circle"></i></a>
+              <a href="/product" class="menu__link__desk"> Libros </a>
           </li>
           <li class="menu__items__desk">
-            <a href="/novelties" class="menu__link__desk"><i class="fas fa-circle"></i> Recomendados <i class="fas fa-circle"></i></a>
+            <a href="/novelties" class="menu__link__desk"> Recomendados </a>
           </li>
           <li class="menu__items__desk">
-            <a href="/novelties" class="menu__link__desk__desk"><i class="fas fa-circle"></i> Novedades <i class="fas fa-circle"></i></a>
+            <a href="/novelties" class="menu__link__desk__desk"> Novedades </a>
           </li>
           <li class="menu__items__desk">
-            <a href="/aboutUs" class="menu__link__desk"><i class="fas fa-circle"></i> Nosotros <i class="fas fa-circle"></i></a>
+            <a href="/aboutUs" class="menu__link__desk">Nosotros </a>
           </li>
         </ul>
     </nav>
