--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -7,14 +7,13 @@
 <!-- HEADER -->
 <%- include('../partials/header') %> 
 <seccion class="conteiner-main">
-  <div class="nov-title">
+  <div class="headline">
+    <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
     <h1>Novedades</h1>
     <hr class="bg-blue">
   </div>
-  <div class="m-1">
-    <h4 class="d-inline">SpellBook</h4><p class="d-inline">  te trae las últimas novedades en libros ...</p>
-  </div>
-  <p class="m-1"> Si estás buscando ultimos lanzamiento de libros estás en el lugar adecuado.</p>
+
+  <p class="m-1"> Si estás buscando los últimos lanzamientos... ¡estás en el lugar adecuado!</p>
   <% booksNovelties.forEach((book, i) => { %>
     <% if (i % 2 == 0) { %>
 
@@ -57,7 +56,8 @@
   
 </seccion>
 <seccion class="conteiner-main">
-  <div class="nov-title">
+  <div class="headline">
+    <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
     <h1>Recomendados</h1>
     <hr class="bg-blue">
   </div>
@@ -110,8 +110,9 @@
 </seccion>
 
 <seccion class="conteiner-main">
-  <div class="nov-title">
-    <h1>Los mas Vistos</h1>
+  <div class="headline">
+    <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
+    <h1>Los más vistos</h1>
     <hr class="bg-blue">
   </div>
 
