--- a/spellBook/public/stylesheets/footer.css
+++ b/spellBook/public/stylesheets/footer.css
@@ -30,40 +30,45 @@ footer a{
 
 .footer-myAccount .footer-header p{
 text-transform: uppercase;
-font-size: 0.75rem;
+font-size: 1rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
 margin-top: 0.8rem;
+letter-spacing: 0.1rem;
 
 }
 
 .footer-contactUs .footer-header p{
 text-transform: uppercase;
-font-size: 0.75rem;
+font-size: 1rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
 margin-top: 0.8rem;
+letter-spacing: 0.1rem;
 }
 
 .footer-onlineStore .footer-header p{
 text-transform: uppercase;
-font-size: 0.75rem;
+font-size: 1rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
 margin-top: 0.8rem;
+letter-spacing: 0.1rem;
  }
         
-.footer-options p{
+.footer-options .footerP{
     margin: 0.2rem 0;
+    letter-spacing: 0.1rem;
+    font-weight: normal;
 }
 
 
 /* LOGO */
-.footer-logo p {
+.footer-logo p.footerLogo {
 font-family: var(--font-berkshire);
 text-align: center;
-font-size: 1.5rem;
-margin: 0;
+font-size: 2rem;
+margin-bottom: 0.5rem;
 padding: 0.3rem;
 letter-spacing: 0.2rem;
 text-shadow: 1px 1px 4px grey;
