mejorando vista aboutUs

--- a/spellBook/src/views/aboutUs.ejs
+++ b/spellBook/src/views/aboutUs.ejs
@@ -56,22 +56,22 @@
   
   <article class="wizards-Cesar">
     <a title="GitHub" href="https://github.com/CesarTolaba"><img src="/images/Recursos/magician.png" alt="Imagen mago"></a>
-    <p>César Tolaba</p>
+    <p class="wizards-p">César Tolaba</p>
   </article>
 
   <article class="wizards-Eli">
     <a title="GitHub" href="https://github.com/EHortua"><img src="/images/Recursos/witch.png" alt="Imagen Bruja"></a>
-    <p>Elízabeth Hortúa</p>
+    <p class="wizards-p">Elízabeth Hortúa</p>
   </article>
 
   <article class="wizards-Maca">
     <a title="GitHub" href="https://github.com/MacarenaPrz"><img src="/images/Recursos/witch.png" alt="Imagen Bruja"></a>
-    <p>Macarena Pérez</p>
+    <p class="wizards-p">Macarena Pérez</p>
   </article>
 
   <article class="wizards-Raul">
     <a title="GitHub" href="https://github.com/RaulREscobar"><img src="/images/Recursos/magician.png" alt="Imagen mago"></a>
-    <p>Raúl Escobar</p>
+    <p class="wizards-p">Raúl Escobar</p>
 
   </article>
 
