--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <div class="star star5"></div>
     <div class="star star6"></div>
     <div class="star star7"></div>
-     <div class="star star8"></div>
+    <div class="star star8"></div>
     <!-- LOGO CON LINK AL HOME -->
     <div class="logo">
       <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
@@ -50,7 +50,7 @@
         <% } else { %>
           <div class="login">
             <a href="/user/signUp" class="login__btn">Registrate</a>
-            <a href="/user/login" class="login__btn login--up">Iniciar sesion</a>
+            <a href="/user/login" class="login__btn login--up">Iniciá sesión</a>
           </div>
       <% } %>
       
