--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -59,7 +59,6 @@
               <th>Imagen</th>
               <th class="description-on">Descripcion</th>
               <th>Título</th>
-              <th>Autor</th>
               <th>Cantidad</th>
               <th>Precio</th>
               <th>Estado</th>
@@ -72,12 +71,11 @@
                 <% products.forEach(book => { %>
                 <tr>
                   <td><input type="checkbox"></td>
-                  <td><img src="/images/Libros/<%= book.imagen%>"></td>
-                  <td class="description-on"><%=  book.descripcion.slice(0 , 200) %> ...</td>
-                  <td><%= book.titulo%></td>
-                  <td><%= book.autor%></td>
-                  <td><%= book.cantidad%></td>
-                  <td><%= book.precio%></td>
+                  <td><img src="/images/Libros/<%= book.image%>"></td>
+                  <td class="description-on"><%=  book.description.slice(0 , 200) %> ...</td>
+                  <td><%= book.title%></td>
+                  <td><%= book.stock%></td>
+                  <td><%= book.price%></td>
                   <td>Activo</td>
                   <td>
                     <a href="/admin/editProduct/<%= book.id %>" class="button-edit">
@@ -149,7 +147,7 @@
             <label for="descripcion">Descripción:</label>
             <input
               type="textarea"
-              name="description"
+              name="descripcion"
               id="description"
               
               
