la app consume de la base de datos, se modifican vistas para que respondan a la base de datos, se hace funcional el editForm

--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -30,7 +30,7 @@
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
-      <h1>Hola <%= locals.userLog.nombre %>  </h1>
+      <h1>Hola <%= locals.userLog.name %>  </h1>
       <div class="belluser">
         <button class="display-shop" id="button-create">Agregar libro</button>
         <a href="/user/login">
