--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -111,11 +111,11 @@
           <a href="/product/<%= book.id %> ">
             <img class="book-cover" src="/images/Libros/<%= book.image %> " alt="Portada de 'El temor de un hombre sabio'">
           </a>
-          <h3><%= book.titulo %> </h3>
-          <h5><%= book.autor %> </h5>
+          <h3><%= book.title %> </h3>
+          <h5><%= book.author.name %> </h5>
         <div class="book-price">
           <i class="fas fa-dollar-sign"></i>
-          <p><%= book.precio %> </p>
+          <p><%= book.price %> </p>
         </div>
           <!-- Botón de comprar -->
         <div>
@@ -144,11 +144,11 @@
           <a href="/product/<%= book.id %> ">
             <img class="book-cover" src="/images/Libros/<%= book.image %> " alt="Portada de 'El temor de un hombre sabio'">
           </a>
-          <h3><%= book.titulo %> </h3>
-          <h5><%= book.autor %> </h5>
+          <h3><%= book.title %> </h3>
+          <h5><%= book.author.name %> </h5>
         <div class="book-price">
           <i class="fas fa-dollar-sign"></i>
-          <p><%= book.precio %> </p>
+          <p><%= book.price %> </p>
         </div>
           <!-- Botón de comprar -->
         <div>
