--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -83,7 +83,7 @@
                 <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
             </a>            
             <a href="/user/profile" class="wizard__login">
-              <p><%= locals.userLog.nombre %>/</p>
+              <p><%= locals.userLog.name %>  / </p>
            </a>
            <a href="/user/logout" class="wizard__login">
                <p> Cerrar sesión</p>
