--- a/spellBook/src/views/products/productDetail.ejs
+++ b/spellBook/src/views/products/productDetail.ejs
@@ -30,7 +30,7 @@
               Año de edicion:<span class="description--gray"><%= idBook.publication_year %></span>
             </p>
             <p class="descriptions__text">
-              Idioma:<span class="description--gray"><%= idBook.lenguage %></span>
+              Idioma:<span class="description--gray"><%= idBook.language %></span>
             </p>
             <p class="descriptions__text">
               Cantidad de páginas:<span class="description--gray"><%= idBook.pages %></span>
