--- a/spellBook/src/views/users/profile.ejs
+++ b/spellBook/src/views/users/profile.ejs
@@ -33,7 +33,7 @@
         <!-- NOMBRE -->
         <div class="info-user">
           <img class="user-data-icon user-pocision" height="40px" src="/images/recursos/wizard-icon.png" alt="img de mago">
-          <p><%= session.nombre %> </p>
+          <p><%= session.name %> </p>
         </div>
 
         <!-- EMAIL -->
