--- a/spellBook/src/views/partials/header.ejs
+++ b/spellBook/src/views/partials/header.ejs
@@ -8,6 +8,7 @@
     <div class="star star6"></div>
     <div class="star star7"></div>
     <div class="star star8"></div>
+    
     <!-- LOGO CON LINK AL HOME -->
     <div class="logo">
       <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
@@ -78,7 +79,20 @@
         </a>
         <!-- MAGO PARA REGISTRARSE -->
         <div class="wizard">
+       
           <% if (locals.inLogged) { %>
+            <% if (locals.userLog.rol === "admin") { %>
+              <a href="/user/profile" class="wizard__image">
+                <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
+            </a>            
+            <a href="/admin/addProduct" class="wizard__login">
+              <p><%= locals.userLog.name %>  / </p>
+           </a>
+           <a href="/user/logout" class="wizard__login">
+               <p> Cerrar sesión</p>
+           </a>
+            <% } else if (locals.userLog.rol === "user") { %>
+
             <a href="/user/profile" class="wizard__image">
                 <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
             </a>            
@@ -87,8 +101,8 @@
            </a>
            <a href="/user/logout" class="wizard__login">
                <p> Cerrar sesión</p>
-           </a>
-           
+           </a>            
+          <% } %>
           <% } else { %>
             <a href="/user/login" class="wizard__image">
               <img src="/images/recursos/wizard-icon.png" width="20px" alt="">
@@ -98,7 +112,7 @@
            </a>
            <a href="/user/signUp" class="wizard__login">
                <p> Registrarse</p>
-           </a>
+           </a> 
           <% } %>
             
         </div>
